--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,5 +30,5 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
-      - name: Check formatting (black)
-        run: black . --check
+      # - name: Check formatting (black)
+      #   run: black . --check
